2009-10-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12239: Record statistics use hidden tables and isn't formated well

2009-10-16  Bernhard Kraft  <bernhard@typo3.org>

	* Fixed Bug #12218: Spaces in Webroot path break ImageMagick compose (thanks to Joerg Wagner)

2009-10-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12246: Reports module: icon not clickable

2009-10-16  Francois Suter  <francois@typo3.org>

	* Cleanup #12245: Reports: Cleaned up API for providers in status report
	* Feature #12167: Reports: Enhanced report registration API to provide custom icons for reports
	* Feature #12178: Provide a report for installed services in the new Reports module
	* Cleanup #12249: Improved comments about service registration in EXT:sv/ext_tables.php and EXT:sv/ext_localconf.php
	* Fixed bug #12132: Scheduler: Introduced proper handling of incomplete objects after unserialization from DB storage
	* Cleanup #12211: Scheduler: Corrected a couple of labels and one code indent in BE module
	* Follow-up to bug #12117: The flash messages sometimes contained content meant for the main screen and not the message

2009-10-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11963: MEDIA.renderType in TypoScript is reset
	* Fixed bug #12207: $this->doc->sectionHeader return wrong HTML

2009-10-15  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #8728: PHP Warning, if SQL error occurs in class t3lib_db in functions which depend on an existing resultset (thanks to Felix Oertel)
	* Fixed bug #12196: PHP warning in FE with activated DLOG and mbstring set as t3lib_cs_utils

2009-10-14  Oliver Hader  <oliver@typo3.org>

	* Reverted bugfix #10050: Traversing back page records used in CONTENT object does not work on root page

2009-10-12  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12209: [felogin] lang label for send change password link misses variable for valid end time

2009-10-11  Steffen Kamper  <info@sk-typo3.de>
