@@ -1,5 +1,6 @@
 2009-10-19  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #10897: typo3/db_new.php prompts to create records in hidden, static and readonly tables
 	* Fixed bug #12239: Record statistics use hidden tables and isn't formated well
 
 2009-10-16  Bernhard Kraft  <bernhard@typo3.org>
